log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 04:26:30 PM UTC: 
 tests:  0|6
total_score: 0/70
e4aad24
Fri 31 Mar 2023 11:25:16 AM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
ce206d2
Fri 31 Mar 2023 11:26:50 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
0027e7a
Fri 31 Mar 2023 11:27:13 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
e608bcb
Fri 31 Mar 2023 11:28:12 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
9e1219f
Fri 31 Mar 2023 11:29:02 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
730a72d
Fri 31 Mar 2023 11:32:16 AM UTC: 
 arraylist.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:17: error: assignment to ‘void **’ from incompatible pointer type ‘int **’ [-Werror=incompatible-pointer-types]
   17 |   lista -> data = (int**)malloc(sizeof(int*)*(lista -> size));
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
56278e6
Fri 31 Mar 2023 11:32:33 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
0b195b9
Fri 31 Mar 2023 11:32:54 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
d6c3358
Fri 31 Mar 2023 11:33:19 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
51a17f9
Fri 31 Mar 2023 11:33:28 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c57fb33
Fri 31 Mar 2023 11:43:35 AM UTC: 
 arraylist.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
a76a497
Fri 31 Mar 2023 11:45:45 AM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
5cb66ed
Fri 31 Mar 2023 11:46:32 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d742059
Fri 31 Mar 2023 11:48:38 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
132dc6c
Fri 31 Mar 2023 11:49:07 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f63f430
Fri 31 Mar 2023 11:49:57 AM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f533054
Fri 31 Mar 2023 11:50:34 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
fd022c1
Fri 31 Mar 2023 11:51:56 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
7b2b468
Fri 31 Mar 2023 11:52:10 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
1851379
Fri 31 Mar 2023 11:52:26 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
6cf904d
Fri 31 Mar 2023 11:53:09 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
7f33997
Fri 31 Mar 2023 11:54:53 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
bffcab7
Fri 31 Mar 2023 11:55:28 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
0238d13
Fri 31 Mar 2023 11:57:34 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
f2052e7
Fri 31 Mar 2023 11:59:40 AM UTC: 
 arraylist.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  3|4
total_score: 20/70
8ce6b75
Fri 31 Mar 2023 12:05:13 PM UTC: 
 arraylist.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|4
total_score: 20/70
d1c44d2
Fri 31 Mar 2023 12:05:39 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
b1e0a99
Fri 31 Mar 2023 12:07:11 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5f2d513
Fri 31 Mar 2023 12:07:29 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c02845e
Fri 31 Mar 2023 12:08:14 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
2723dfe
